add state for layouts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,11 @@ set(PROJECT_SOURCES
         mainwindow.cpp
         mainwindow.h
         mainwindow.ui
+        game1.cpp
+        game1.h
+        game1.ui
+        GameState.h
+
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
