--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         qlabelfactory.h qlabelfactory.cpp
-
-
+        SoundManager.h
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET ProyectoTO APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
@@ -53,6 +52,7 @@ else()
 endif()
 
 target_link_libraries(ProyectoTO PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(ProyectoTO PRIVATE Qt${QT_VERSION_MAJOR}::Multimedia)
 
 set_target_properties(ProyectoTO PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
