--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         SoundManager.h
         Draggable.h
         FigureManager.h
+        AbstractLabelFactory.h
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET ProyectoTO APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
